# ffmpeg-VideoPlayer

./: CMakeLists.txt  CMakeUserPresets.json  LICENSE  README.md  Res.qrc  SAudioFormat.h  SAudioPlay.cpp  SAudioPlay.h  SEventFilterObject.cpp  SEventFilterObject.h  SFFmpeg.cpp  SFFmpeg.h  SLogger.cpp  SLogger.h  SPlay.cpp  SPlay.h  SPlay.ui  VideoThread.cpp  VideoThread.h  VideoWidget.cpp  VideoWidget.h  main.cpp
Res/: style.qss
